@@ -35,5 +35,65 @@ CREATE OPERATOR @ (
 	procedure = unit_at
 );
 
+-- strict comparisons
+
+CREATE FUNCTION unit_strict_lt(unit, unit) RETURNS bool
+   AS '$libdir/unit' LANGUAGE C IMMUTABLE STRICT;
+CREATE FUNCTION unit_strict_le(unit, unit) RETURNS bool
+   AS '$libdir/unit' LANGUAGE C IMMUTABLE STRICT;
+CREATE FUNCTION unit_strict_eq(unit, unit) RETURNS bool
+   AS '$libdir/unit' LANGUAGE C IMMUTABLE STRICT;
+CREATE FUNCTION unit_strict_ne(unit, unit) RETURNS bool
+   AS '$libdir/unit' LANGUAGE C IMMUTABLE STRICT;
+CREATE FUNCTION unit_strict_ge(unit, unit) RETURNS bool
+   AS '$libdir/unit' LANGUAGE C IMMUTABLE STRICT;
+CREATE FUNCTION unit_strict_gt(unit, unit) RETURNS bool
+   AS '$libdir/unit' LANGUAGE C IMMUTABLE STRICT;
+
+CREATE OPERATOR << (
+	leftarg = unit, rightarg = unit, procedure = unit_strict_lt,
+	commutator = >> , negator = >>= ,
+	restrict = scalarltsel, join = scalarltjoinsel
+);
+CREATE OPERATOR <<= (
+	leftarg = unit, rightarg = unit, procedure = unit_strict_le,
+	commutator = >>= , negator = >> ,
+	restrict = scalarltsel, join = scalarltjoinsel
+);
+CREATE OPERATOR == (
+	leftarg = unit, rightarg = unit, procedure = unit_strict_eq,
+	commutator = == , negator = <<>> ,
+	restrict = eqsel, join = eqjoinsel
+);
+CREATE OPERATOR <<>> (
+	leftarg = unit, rightarg = unit, procedure = unit_strict_ne,
+	commutator = <<>> , negator = == ,
+	restrict = neqsel, join = neqjoinsel
+);
+CREATE OPERATOR >>= (
+	leftarg = unit, rightarg = unit, procedure = unit_strict_ge,
+	commutator = <<= , negator = << ,
+	restrict = scalargtsel, join = scalargtjoinsel
+);
+CREATE OPERATOR >> (
+	leftarg = unit, rightarg = unit, procedure = unit_strict_gt,
+	commutator = << , negator = <<= ,
+	restrict = scalargtsel, join = scalargtjoinsel
+);
+
+CREATE FUNCTION unit_strict_cmp(unit, unit)
+	RETURNS int4
+	AS '$libdir/unit'
+	LANGUAGE C IMMUTABLE STRICT;
+
+CREATE OPERATOR CLASS unit_strict_ops
+	FOR TYPE unit USING btree AS
+		OPERATOR 1 << ,
+		OPERATOR 2 <<= ,
+		OPERATOR 3 == ,
+		OPERATOR 4 >>= ,
+		OPERATOR 5 >> ,
+		FUNCTION 1 unit_strict_cmp(unit, unit);
+
 -- load prefixes and units tables
 SELECT unit_load();
